2009-10-01  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc 
	(do_num2cell_helper, do_num2cell): New funcs.
	(Fnum2cell): Rewrite.
	(do_cellslices_nda): Do not leave trailing dims.

2009-09-30  John W. Eaton  <jwe@octave.org>

	* error.cc (error_1, pr_where_2, handle_message):
	Don't do anything if fmt is empty.
	(Ferror): Call print_usage if nargin == 0.

2009-09-29  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/typecast.cc (Ftypecast): Rewrite.
	(Fbitpack, Fbitunpack): New DEFUNs.

2009-09-28  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::handle): Redraw the
	overlay when zoom box changes size.
	* DLD-FUNCTIONS/fltk_backend.cc (fltk_mouse_wheel_zoom): New
	function to set mouse wheel zoom factor.

2009-09-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/sub2ind.cc (get_dimensions): Allow singleton array.
	(Fsub2ind): Allow single index.

2009-09-26  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-m-m.cc (trans_mul, mul_trans): Update.
	* OPERATORS/op-fm-fm.cc (trans_mul, mul_trans): Update.
	* OPERATORS/op-cm-cm.cc (trans_mul, mul_trans, herm_mul, mul_herm): Update.
	* OPERATORS/op-fcm-fcm.cc (trans_mul, mul_trans, herm_mul, mul_herm): Update.
	* OPERATORS/op-m-cm.cc (trans_mul): Update.
	* OPERATORS/op-cm-m.cc (mul_trans): Update.
	* OPERATORS/op-fm-fcm.cc (trans_mul): Update.
	* OPERATORS/op-fcm-fm.cc (mul_trans): Update.

2009-09-23  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-m-cm.cc: Declare and install trans_mul operator.
	* OPERATORS/op-fm-fcm.cc: Ditto.
	* OPERATORS/op-cm-m.cc: Declare and install mul_trans operator.
	* OPERATORS/op-fcm-fm.cc: Ditto.

2009-09-23  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-m-cm.cc: Declare and install trans_ldiv operator.
	* OPERATORS/op-fm-fcm.cc: Ditto.

2009-09-23  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::op_trans_ldiv, op_herm_ldiv): New enum constants.